# cpp-template

./: .gitignore  CMakeLists.txt
src/: appmain.cpp  appmain.h  gamedata.h  gameover.cpp  gameover.h  gamestate.cpp  gamestate.h  input.cpp  input.h  main.cpp  overworld.cpp  overworld.h  shuttingdown.h  title.cpp  title.h  transition.cpp  transition.h
src/screens/: overworld.cpp  overworld.h  title.cpp  title.h  transition.h
tests/: CMakeLists.txt  tests.cpp
